--- a/spec-nightly/boot.yaml
+++ b/spec-nightly/boot.yaml
@@ -82,6 +82,10 @@ packages:
   # builds the stage2 packages
 
   stage2:
+    - ./boot/old-locale
+    - ./boot/base-compat
+    - ./boot/bytestring-builder
+    - ./boot/time-locale-compat
     - ./boot/async
     - ./boot/aeson
     - ./boot/attoparsec
