--- a/prepare-ghcjs.cabal
+++ b/prepare-ghcjs.cabal
@@ -46,5 +46,6 @@ executable prepare-ghcjs
                       , prepare-ghcjs
                       , turtle
                       , text
+                      , system-filepath
   hs-source-dirs:       src
   default-language:     Haskell2010
